--- a/Inf450_2022_Demo_Direct_Mapping_Cache_Gradio.ipynb
+++ b/Inf450_2022_Demo_Direct_Mapping_Cache_Gradio.ipynb
@@ -708,7 +708,6 @@
         }
       ],
       "source": [
-        "\n",
         "%%writefile fsm.v\n",
         "module fsm(\n",
         "  input wire clk, reset, c, v, w, op, RB_End, WB_End,\n",
@@ -730,9 +729,9 @@
         "      RESET: state <= ReadTag;\n",
         "\n",
         "      ReadTag:\n",
-        "        if (c && v && not op) state <= ReadData;\n",
-        "        else if (c && v && op) state <= WriteData;\n",
-        "        else if ((not v) || (not c && not w))  state <= ReadBlk;\n",
+        "        if (c & v & ~op) state <= ReadData;\n",
+        "        else if (c & v & op) state <= WriteData;\n",
+        "        else if ((~v) || (~c & ~w))  state <= ReadBlk;\n",
         "        else state <= WriteBlock;\n",
         "      ReadData:\n",
         "        state <= ReadTag;\n",
@@ -957,6 +956,7 @@
         "fsm  FSM(\n",
         "  .clk (clk),\n",
         "  .reset (reset),\n",
+        "  .op (op),\n",
         "  .c (c) ,\n",
         "  .v (v),\n",
         "  .RB_End (RB_End),\n",
@@ -1363,6 +1363,7 @@
         "wire[32:0] g = blockBits;\n",
         "wire[32:0] h = tagBits;\n",
         "\n",
+        "reg op;\n",
         "reg [ramBits-1:0] address;\n",
         "reg [7:0] din;\n",
         "reg clk,reset;\n",
@@ -1393,6 +1394,7 @@
         "address=0;\n",
         "reset = 1;\n",
         "#2\n",
+        "op=0;\n",
         "reset=0;\n",
         "#4\n",
         "`include \"input.v\"\n",
