--- a/Valgrind_Simulador_de_Cache.ipynb
+++ b/Valgrind_Simulador_de_Cache.ipynb
@@ -2645,7 +2645,7 @@
             "description": "",
             "description_tooltip": null,
             "disabled": false,
-            "index": 2,
+            "index": 0,
             "layout": "IPY_MODEL_bb18d910e8df403e9e378f512b0c5c06",
             "style": "IPY_MODEL_36d1cb178d22464785d72666478a901b"
           }
@@ -3322,10 +3322,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "mibTjp3bOJl_",
-        "outputId": "f493b7ea-8e9d-4234-dab0-98060f745555",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f493b7ea-8e9d-4234-dab0-98060f745555"
       },
       "source": [
         "!pip install git+https://github.com/lesc-ufv/cad4u >& /dev/null\n",
@@ -3643,7 +3643,7 @@
         "\n",
         "int main(int argc, char const *argv[]) {\n",
         "\n",
-        "  int n = 90;\n",
+        "  int n = 20;\n",
         "  char a[n][n], b[n][n], c[n][n];\n",
         "\n",
         "  int s = 0;\n",
@@ -3734,6 +3734,9 @@
       "source": [
         "### Associative\n",
         "\n",
+        "size=2\n",
+        "line=32\n",
+        "\n",
         "#### 20\n",
         "associative = ['1', '4', '16']\n",
         "misses = [7611, 4232, 4124]\n",
@@ -3754,6 +3757,9 @@
       "cell_type": "markdown",
       "source": [
         "### Line\n",
+        "\n",
+        "size=2\n",
+        "associative=1\n",
         "\n",
         "#### 20\n",
         "line = ['32', '64', '128']\n",
