--- a/Valgrind_Simulador_de_Cache.ipynb
+++ b/Valgrind_Simulador_de_Cache.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3320,15 +3321,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mibTjp3bOJl_"
+        "id": "mibTjp3bOJl_",
+        "outputId": "e9007316-b41e-4925-a786-bd2249a44db0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!pip install git+https://github.com/lesc-ufv/cad4u >& /dev/null\n",
         "!git clone https://github.com/lesc-ufv/cad4u >& /dev/null\n",
+        "!apt-get install g++\n",
         "%load_ext plugin"
       ],
-      "execution_count": 11,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "g++ is already the newest version (4:9.3.0-1ubuntu2).\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 4 not upgraded.\n",
+            "The plugin extension is already loaded. To reload it, use:\n",
+            "  %reload_ext plugin\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
